force-app/main/default/objects/ServiceResource/fields/CoIT_Date_Time_for_Consider_Offline__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Date_Time_for_Consider_Offline__c</fullName>
    <description>Indicates the date and time to be considered offline.</description>
    <inlineHelpText>Indicates the date and time to be considered offline.</inlineHelpText>
    <label>Date/Time to Be Considered Offline</label>
    <type>DateTime</type>
</CustomField>