force-app/main/default/objects/ServiceResource/fields/CoIT_Is_Account_Active__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Is_Account_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether the account that the service resource belongs to is active</description>
    <inlineHelpText>Indicate whether the account that the service resource belongs to is active</inlineHelpText>
    <label>Is Account Active</label>
    <type>Checkbox</type>
</CustomField>