force-app/main/default/objects/ServiceResource/fields/CoIT_Is_Online__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Is_Online__c</fullName>
    <description>Indicates whether the service resource is online.</description>
    <formula>IF( CoIT_Date_Time_for_Consider_Offline__c &gt;= NOW(), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether the service resource is online.</inlineHelpText>
    <label>Is Online</label>
    <type>Checkbox</type>
</CustomField>