force-app/main/default/objects/ServiceResource/fields/CoIT_LastDateTimeOfOfferAcceptance__c.field-meta.xml
<CustomField>
    <fullName>CoIT_LastDateTimeOfOfferAcceptance__c</fullName>
    <label>Last DateTime of Offer Acceptance</label>
    <type>DateTime</type>
</CustomField>