force-app/main/default/objects/ServiceResource/fields/CoIT_Online_Offset_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Online_Offset_In_Minutes__c</fullName>
    <defaultValue>30</defaultValue>
    <description>For how many minutes from the last seen does the resource consider online</description>
    <inlineHelpText>For how many minutes from the last seen does the resource consider online</inlineHelpText>
    <label>Online Offset In Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>