force-app/main/default/objects/ServiceResource/fields/CoIT_UpdateAbcenseRealTimeLocation__c.field-meta.xml
<CustomField>
    <fullName>CoIT_UpdateAbcenseRealTimeLocation__c</fullName>
    <formula>IF( CoIT_LastDateTimeOfOfferAcceptance__c + (3/1440) &gt;  NOW(), False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Abcense Real Time Location</label>
    <type>Checkbox</type>
</CustomField>