force-app/main/default/objects/ServiceResource/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Grade</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>