force-app/main/default/objects/ServiceResource/validationRules/Change_the_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_the_name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Profile.Name = &quot;CoIT Proveedor Base Partner Bolivar&quot;,
    ISCHANGED(Name)
)</errorConditionFormula>
    <errorMessage>No tienes permisos para editar el nombre de los recursos de servicio.</errorMessage>
</ValidationRule>