force-app/main/default/objects/ServiceResource/listViews/all_service_resource.listView-meta.xml
<ListView>
    <fullName>all_service_resource</fullName>
    <columns>Name</columns>
    <columns>CoIT_Is_Online__c</columns>
    <columns>RelatedRecord</columns>
    <columns>CoIT_N_Documento__c</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>Id__c</columns>
    <columns>CoIT_Proveedor_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los recursos de servicio</label>
</ListView>