force-app/main/default/objects/ServiceResource/listViews/sobre_ruedas.listView-meta.xml
<ListView>
    <fullName>sobre_ruedas</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CoIT_Proveedor_ID__c</field>
        <operation>equals</operation>
        <value>001O8000009lv0wIAA</value>
    </filters>
    <label>sobre ruedas</label>
    <sharedTo>
        <group>GRU_TAX_SOBRE_RUEDA_SERV_AL_INSTANTE_SAS</group>
    </sharedTo>
</ListView>