force-app/main/default/objects/ServiceResource/listViews/Tecnicos_Bantto.listView-meta.xml
<ListView>
    <fullName>Tecnicos_Bantto</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account</field>
        <operation>contains</operation>
        <value>GRU-BANTTO GRUAS SAS</value>
    </filters>
    <label>Tecnicos Bantto</label>
    <sharedTo>
        <group>GRU_BANTTO_GRUAS_SAS</group>
    </sharedTo>
</ListView>