force-app/main/default/objects/ServiceResource/listViews/Tecnicos_Ra_Logistica.listView-meta.xml
<ListView>
    <fullName>Tecnicos_Ra_Logistica</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account</field>
        <operation>contains</operation>
        <value>logistica</value>
    </filters>
    <label>Tecnicos Ra Logistica</label>
    <sharedTo>
        <group>Tra_RA_LOGISTICA_SAS_CU</group>
    </sharedTo>
</ListView>