force-app/main/default/objects/ServiceResource/listViews/Tecnicos_RCR.listView-meta.xml
<ListView>
    <fullName>Tecnicos_RCR</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>Id__c</columns>
    <columns>CoIT_Proveedor_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CoIT_Proveedor_ID__c</field>
        <operation>equals</operation>
        <value>0018M00000SM5ESQA1</value>
    </filters>
    <label>Tecnicos RCR</label>
    <sharedTo>
        <portalRoleAndSubordinates>RCRProyectosSASSocioUsuario</portalRoleAndSubordinates>
    </sharedTo>
</ListView>