force-app/main/default/objects/ServiceResource/listViews/Tecnicos_Suba.listView-meta.xml
<ListView>
    <fullName>Tecnicos_Suba</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>Id__c</columns>
    <columns>CoIT_Proveedor_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CoIT_Proveedor_ID__c</field>
        <operation>equals</operation>
        <value>0018M00000SM5EQQA1</value>
    </filters>
    <label>Tecnicos Suba</label>
    <sharedTo>
        <portalRoleAndSubordinates>AgenciadeplomeradeSubaLtdaClienteUsuario</portalRoleAndSubordinates>
    </sharedTo>
</ListView>